plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.marcos'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

ext {
	set('springModulithVersion', "2.1.0")
	set('springAiVersion', "2.0.0")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.ai:spring-ai-starter-model-ollama'

	implementation 'com.bucket4j:bucket4j_jdk17-core:8.19.0'
	implementation 'com.bucket4j:bucket4j_jdk17-caffeine:8.19.0'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.2.4'

	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'org.springframework.boot:spring-boot-flyway'
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.postgresql:postgresql'

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.2.15.Final:osx-aarch_64'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
	testImplementation 'org.testcontainers:postgresql:1.21.3'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('-parameters')
	options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
	jvmArgs += ['--enable-preview']
}
